--- a/activity.tex
+++ b/activity.tex
@@ -12,8 +12,12 @@ This is a starting point for you to create your own activity.
 
 \maketitle
 
+My name is Jim Fowler.  I am editing this file.  Whee.
+
+I can edit it!  And as I edit it, it will update.
+
 \begin{problem}
-   The tolerance (0.01) means $8 \approx \answer[tolerance=0.01]{8}$
+   The tolerance (0.01) means $2 \approx \answer[tolerance=0.01]{2}$
 \end{problem}
 
  \begin{problem}
