change to my name

--- a/activity.tex
+++ b/activity.tex
@@ -12,7 +12,7 @@ This is a starting point for you to create your own activity.
 
 \maketitle
 
-My name is Jim Fowler.  I am editing this file.  Whee.
+My name is Jack Schmidt.  I am editing this file.  Whee.
 
 I can edit it!  And as I edit it, it will update.
 
